--- a/Ketch/UserInterface/RootView.xib
+++ b/Ketch/UserInterface/RootView.xib
@@ -11,17 +11,33 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RootViewController">
             <connections>
-                <outlet property="loadingView" destination="iew-qZ-urT" id="k1T-bi-6et"/>
-                <outlet property="view" destination="iN0-l3-epB" id="vqM-2e-9jj"/>
+                <outlet property="view" destination="E8R-mf-WeZ" id="5fn-So-f15"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="KetchBackgroundView" customModule="Ketch" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+        <view contentMode="scaleToFill" id="E8R-mf-WeZ" customClass="RootView" customModule="Ketch" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Y2G-cr-B1X" customClass="WaveView" customModule="Ketch" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="567" width="375" height="580"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Ketch" translatesAutoresizingMaskIntoConstraints="NO" id="mUK-mt-n35">
+                    <rect key="frame" x="168" y="535" width="39" height="42"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="34" id="Fva-u8-quc"/>
+                        <constraint firstAttribute="height" constant="37" id="qML-Xw-Oy4"/>
+                    </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="Fva-u8-quc"/>
+                            <exclude reference="qML-Xw-Oy4"/>
+                        </mask>
+                    </variation>
+                </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iew-qZ-urT" userLabel="Loading View">
-                    <rect key="frame" x="50.5" y="241" width="219.5" height="86"/>
+                    <rect key="frame" x="78" y="291" width="219.5" height="86"/>
                     <subviews>
                         <activityIndicatorView opaque="NO" alpha="0.25" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="yyG-n9-DPz">
                             <rect key="frame" x="91" y="0.0" width="37" height="37"/>
@@ -45,14 +61,29 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.94117647059999998" green="0.98039215690000003" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="centerY" secondItem="iew-qZ-urT" secondAttribute="centerY" id="8J3-Tm-Eut"/>
-                <constraint firstAttribute="centerX" secondItem="iew-qZ-urT" secondAttribute="centerX" id="Zzs-DO-4TW"/>
+                <constraint firstItem="Y2G-cr-B1X" firstAttribute="leading" secondItem="E8R-mf-WeZ" secondAttribute="leading" id="20Q-BT-BEy"/>
+                <constraint firstAttribute="bottom" secondItem="Y2G-cr-B1X" secondAttribute="top" constant="100" id="O0g-3I-tHG"/>
+                <constraint firstAttribute="centerX" secondItem="iew-qZ-urT" secondAttribute="centerX" id="cde-fd-pT4"/>
+                <constraint firstAttribute="bottom" secondItem="Y2G-cr-B1X" secondAttribute="bottom" priority="252" constant="-200" id="g4E-X1-jph"/>
+                <constraint firstAttribute="trailing" secondItem="Y2G-cr-B1X" secondAttribute="trailing" id="kA1-Kh-oKt"/>
+                <constraint firstItem="Y2G-cr-B1X" firstAttribute="top" secondItem="mUK-mt-n35" secondAttribute="bottom" constant="-10" id="leR-vZ-huo"/>
+                <constraint firstItem="mUK-mt-n35" firstAttribute="centerX" secondItem="Y2G-cr-B1X" secondAttribute="centerX" id="oFw-ir-nfA"/>
+                <constraint firstAttribute="centerY" secondItem="iew-qZ-urT" secondAttribute="centerY" id="vN2-kl-fPw"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-            <point key="canvasLocation" x="441" y="533"/>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+            <connections>
+                <outlet property="horizonHeight" destination="O0g-3I-tHG" id="775-oL-9PQ"/>
+                <outlet property="ketchIcon" destination="mUK-mt-n35" id="UPn-XM-30b"/>
+                <outlet property="loadingView" destination="iew-qZ-urT" id="nP5-Zn-Cl3"/>
+                <outlet property="waveView" destination="Y2G-cr-B1X" id="riN-pJ-nF2"/>
+            </connections>
+            <point key="canvasLocation" x="11.5" y="158.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="Ketch" width="39" height="42"/>
+    </resources>
 </document>
